ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "grafana.devopsb60.online"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pmstack-grafana
                port:
                  number: 80
    - host: "prometheus.devopsb60.online"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pmstack-kube-prometheus-st-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "roboshop-dev.devopsb60.online"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
